Revision history for {{ $dist->name }}:

{{$NEXT}}

v0.1.3    2023-06-08 15:35:31+01:00 Europe/London
  [Enhancements]
  - Include the system error when the file cannot be opened (thanks @barubary@infosec.exchange).

  [Bug Fixes]
  - Fixed another place where absolute path was not used.

  - Removed useless check for file existence (thanks @barubary@infosec.exchange).

  - State the open filehandle (thanks @barubary@infosec.exchange).

v0.1.2    2023-06-08 12:18:04+01:00 Europe/London
  [Enhancements]
  - Use Plack::Util to set file path instead of IO::File::WithPath.

  [Bug Fixes]
  - The file path is resolved to an absolute path before anything is done with it.

  [Documentation]
  - Add note about the lack of logging.

v0.1.1    2023-06-08 09:17:58+01:00 Europe/London
  [Documentation]
  - Documented the Perl version support policy.

  [Toolchain]
  - Sign the distribution.

v0.1.0    2023-06-07 20:44:05+01:00 Europe/London
  - Initial release.